added image upload

--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -11,7 +11,7 @@
           <h3 class="preview__text--name js-preview-name">Nombre Apellido</h3>
           <h4 class="preview__text--role js-preview-job">Front-End Developer</h4>
         </div>
-        <div class="preview__image"></div>
+        <div class="preview__image js__profile-image"></div>
         <div class="preview__links">
           <a
             href="#"
