--- a/src/html/partials/partials__cards/form__fill.html
+++ b/src/html/partials/partials__cards/form__fill.html
@@ -6,61 +6,28 @@
   </legend>
   <div class="form__fill--wrapper">
     <label for="fullname" class="form__label">Nombre Completo</label>
-    <input 
-      type="text"
-      id="name"
-      name="name"
-      placeholder="Ej:Sally Jill"
+    <input type="text" id="name" name="name" placeholder="Ej:Sally Jill"
       pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"
-      class="form__input js-name js-input"
-      required
-    />
+      class="form__input js-name js-input" required />
     <label for="job" class="form__label">Puesto</label>
-    <input
-      type="text"
-      id="job"
-      name="job"
-      placeholder="Ej: Front-end unicorn"
+    <input type="text" id="job" name="job" placeholder="Ej: Front-end unicorn"
       pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"
-      class="form__input js-job  js-input"
-      required
-    />
+      class="form__input js-job  js-input" required />
     <label for="profilepicture" class="form__label">Imagen de perfil</label>
+    <label for="photo" class="form__photobutton js__profile-trigger">Añadir imagen</label>
+    <input class="form__photoinput js__profile-upload-btn" type="file" name="photo" id="photo">
+    <span class="form__photothumb js__profile-preview"></span>
     <label for="email" class="form__label">Email</label>
-    <input
-      type="email"
-      id="email"
-      name="email"
-      placeholder="Ej: sally-hill@gmail.com"
-      class="form__input js-email  js-input"
-      required
-    />
+    <input type="email" id="email" name="email" placeholder="Ej: sally-hill@gmail.com"
+      class="form__input js-email  js-input" required />
     <label for="phone" class="form__label">Teléfono</label>
-    <input
-      type="tel"
-      id="phone"
-      name="phone"
-      placeholder="Ej: 555-55-55-55"
-      class="form__input js-phone  js-input"
-      required
-    />
+    <input type="tel" id="phone" name="phone" placeholder="Ej: 555-55-55-55" class="form__input js-phone  js-input"
+      required />
     <label for="linkedin" class="form__label">Linkedin</label>
-    <input
-      type="text"
-      id="linkedin"
-      name="linkedin"
-      placeholder="Ej: linkedin.com/in/sally.hill"
-      class="form__input js-linkedin  js-input"
-      required
-    />
+    <input type="text" id="linkedin" name="linkedin" placeholder="Ej: linkedin.com/in/sally.hill"
+      class="form__input js-linkedin  js-input" required />
     <label for="github" class="form__label">Github</label>
-    <input
-      type="text"
-      id="github"
-      name="github"
-      placeholder="Ej: @sally-hill"
-      class="form__input js-github  js-input"
-      required
-    />
+    <input type="text" id="github" name="github" placeholder="Ej: @sally-hill" class="form__input js-github  js-input"
+      required />
   </div>
 </fieldset>
