change direction arrows

--- a/src/html/partials/partials__cards/form__share.html
+++ b/src/html/partials/partials__cards/form__share.html
@@ -2,7 +2,7 @@
   <legend class="form__title js-share__title">
     <i class="form__title--icon fas fa-share-alt"></i>
     <h2 class="form__title--text">Comparte</h2>
-    <i class="form__title--chevron icon-medium far fa-chevron-up"></i>
+    <i class="form__title--chevron icon-medium far fa-chevron-down"></i>
   </legend>
   <button class="form__submit" type="submit">
     <i class="form__submit--icon far fa-address-card"></i>crear tarjeta
