--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -186,9 +186,9 @@
   display: none;
 }
 
-.collapsed .form__title--chevron {
-  transform: rotate(180deg);
-}
+// .collapsed .form__title--chevron {
+//   transform: rotate(180deg);
+// }
 .form__photothumb {
   height: 30px;
   width: 30px;
