--- a/src/html/partials/partials__cards/form.html
+++ b/src/html/partials/partials__cards/form.html
@@ -1,4 +1,4 @@
-<form action="#" method="get" class="form">
+<form action="#" method="get" class="form js-form">
   <include src="./form__design.html"></include>
   <include src="./form__fill.html"></include>
   <include src="./form__share.html"></include>
