add JS colors change

--- a/src/scss/components/_palette.scss
+++ b/src/scss/components/_palette.scss
@@ -42,3 +42,15 @@ $colorC3: #a0c0cf;
     color: $text-icon;
   }
 }
+
+.preview__text .colorgreen{
+  color: $colorA1;
+}
+
+.preview__text .colorred{
+  color: $colorA2;
+}
+
+.preview__text .coloryellow{
+  color: $colorA3;
+}
