--- a/src/html/partials/partials__cards/design/palette.html
+++ b/src/html/partials/partials__cards/design/palette.html
@@ -1,10 +1,10 @@
-<div class="form__radio--color--wrapper">
+<div class="form__radio--color--wrapper js-palette">
   <input
-    class="form__radio"
+    class="form__radio js-radio"
     type="radio"
     name="chooseColor"
     id="chooseColor"
-    value="color@@num"
+    value="@@num"
   />
   <div class="form__radio--color--palette">
     <div class="form__radio--color colorA@@num"></div>
