add changes palette

--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -1,5 +1,5 @@
 <section class="card__wrapper">
-  <section class="section__cards">
+  <section class="section__cards ">
     <div class="card__preview">
       <button class="preview__reset js-reset" type="reset">
         <p class="preview__reset--text">Reset</p>
@@ -17,25 +17,25 @@
             href="#"
             class="preview__links--social js-preview-phone"
             title="Phone"
-            ><i class="fas fa-mobile-alt preview__links--icon"></i>
+            ><i class="fas fa-mobile-alt preview__links--icon js-icons"></i>
           </a>
           <a
             href="#"
             class="preview__links--social js-preview-email"
             title="Email"
-            ><i class="far fa-envelope preview__links--icon"></i>
+            ><i class="far fa-envelope preview__links--icon js-icons"></i>
           </a>
           <a
             href="#"
             class="preview__links--social js-preview-linkedin"
             title="Linkedin"
-            ><i class="fab fa-linkedin-in preview__links--icon"></i>
+            ><i class="fab fa-linkedin-in preview__links--icon js-icons"></i>
           </a>
           <a
             href="#"
             class="preview__links--social js-preview-github"
             title="GitHub"
-            ><i class="fab fa-github-alt preview__links--icon"></i>
+            ><i class="fab fa-github-alt preview__links--icon js-icons"></i>
           </a>
         </div>
       </div>
