--- a/src/scss/components/_palette.scss
+++ b/src/scss/components/_palette.scss
@@ -15,19 +15,37 @@ $colorC3: #a0c0cf;
 
 .color {
   &A {
-    &1 {background-color: $colorA1;}
-    &2 {background-color: $colorA2;}
-    &3 {background-color: $colorA3;}
+    &1 {
+      background-color: $colorA1;
+    }
+    &2 {
+      background-color: $colorA2;
+    }
+    &3 {
+      background-color: $colorA3;
+    }
   }
   &B {
-    &1 {background-color: $colorB1;}
-    &2 {background-color: $colorB2;}
-    &3 {background-color: $colorB3;}
+    &1 {
+      background-color: $colorB1;
+    }
+    &2 {
+      background-color: $colorB2;
+    }
+    &3 {
+      background-color: $colorB3;
+    }
   }
   &C {
-    &1 {background-color: $colorC1;}
-    &2 {background-color: $colorC2;}
-    &3 {background-color: $colorC3;}
+    &1 {
+      background-color: $colorC1;
+    }
+    &2 {
+      background-color: $colorC2;
+    }
+    &3 {
+      background-color: $colorC3;
+    }
   }
 }
 
@@ -43,14 +61,23 @@ $colorC3: #a0c0cf;
   }
 }
 
-.preview__text .colorgreen{
+.preview__text .colorgreen {
   color: $colorA1;
 }
 
-.preview__text .colorred{
+.preview__text .colorred {
   color: $colorA2;
 }
 
-.preview__text .coloryellow{
+.preview__text .coloryellow {
+  color: $colorA3;
+}
+.preview__links--icon.js-icons.colourgreen {
+  color: $colorA1;
+}
+.preview__links--icon.js-icons.colourred {
+  color: $colorA2;
+}
+.preview__links--icon.js-icons.colouryellow {
   color: $colorA3;
 }
