add changes boders

--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -7,7 +7,7 @@
       </button>
   
       <div class="card__preview--default">
-        <div class="preview__text">
+        <div class="preview__text js-borderleft">
           <h3 class="preview__text--name js-preview-name">Nombre Apellido</h3>
           <h4 class="preview__text--role js-preview-job">Front-End Developer</h4>
         </div>
@@ -15,25 +15,25 @@
         <div class="preview__links">
           <a
             href="#"
-            class="preview__links--social js-preview-phone"
+            class="preview__links--social js-preview-phone js-border"
             title="Phone"
             ><i class="fas fa-mobile-alt preview__links--icon js-icons"></i>
           </a>
           <a
             href="#"
-            class="preview__links--social js-preview-email"
+            class="preview__links--social js-preview-email js-border"
             title="Email"
             ><i class="far fa-envelope preview__links--icon js-icons"></i>
           </a>
           <a
             href="#"
-            class="preview__links--social js-preview-linkedin"
+            class="preview__links--social js-preview-linkedin js-border"
             title="Linkedin"
             ><i class="fab fa-linkedin-in preview__links--icon js-icons"></i>
           </a>
           <a
             href="#"
-            class="preview__links--social js-preview-github"
+            class="preview__links--social js-preview-github js-border"
             title="GitHub"
             ><i class="fab fa-github-alt preview__links--icon js-icons"></i>
           </a>
