add changes reset button

--- a/src/html/partials/partials__cards/form__design.html
+++ b/src/html/partials/partials__cards/form__design.html
@@ -13,7 +13,7 @@
       >Colores</label
     >
     <div class="form__input--wrapper">
-      <include src="./design/palette.html" num="1"></include>
+      <include src="./design/palette.html" num="1" checked="checked"></include>
       <include src="./design/palette.html" num="2"></include>
       <include src="./design/palette.html" num="3"></include>
     </div>
