--- a/src/html/partials/partials__cards/design/palette.html
+++ b/src/html/partials/partials__cards/design/palette.html
@@ -5,6 +5,7 @@
     name="chooseColor"
     id="chooseColor"
     value="@@num"
+    @@checked
   />
   <div class="form__radio--color--palette">
     <div class="form__radio--color colorA@@num"></div>
