--- a/src/html/partials/partials__cards/form__share.html
+++ b/src/html/partials/partials__cards/form__share.html
@@ -8,4 +8,5 @@
     <i class="form__submit--icon far fa-address-card"></i>crear tarjeta
   </button>
   <a class="js-link-card"></a>
+  <div class="js-twitter"></div>
 </fieldset>
