--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -15,3 +15,4 @@ $text-icon: #54585a;
 $background-header: #ffffff;
 $input-border: #a2deaf;
 $placeholder-color: #c5c5c5;
+$disabled-button: #d5d5d5;
