--- a/src/html/partials/partials__cards/form__share.html
+++ b/src/html/partials/partials__cards/form__share.html
@@ -4,7 +4,7 @@
     <h2 class="form__title--text">Comparte</h2>
     <i class="form__title--chevron icon-medium far fa-chevron-down"></i>
   </legend>
-  <button class="form__submit js-submit" type="submit">
+  <button class="form__submit js-submit" type="submit" disabled>
     <i class="form__submit--icon far fa-address-card"></i>crear tarjeta
   </button>
   <a class="js-link-card"></a>
