--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -163,12 +163,16 @@
     box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.32);
     font-family: $font-index-subtitle;
     font-size: 18px;
-    font-weight: 600px;
+    font-weight: 600;
     line-height: 24px;
     color: $background-header;
     text-transform: uppercase;
     margin-top: 17px;
     margin-bottom: 30px;
+    &:disabled {
+      background-color: $disabled-button;
+      box-shadow: none;
+    }
 
     &--icon {
       font-size: 22px;
