--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -184,7 +184,7 @@
 
 // JAVASCRIPT
 
-.collapsed .form__submit,
+.collapsed .form__share--wrapper,
 .collapsed .form__fill--wrapper,
 .collapsed .form__design--wrapper {
   display: none;
