--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -64,7 +64,7 @@
   .preview__image {
     width: 240px;
     height: 200px;
-    background-image: url('https://www.fillmurray.com/240/200');
+    background-image: url('../images/default-photo.svg');
     background-size: cover;
     background-position: center center;
     margin-top: 10px;
