add twitter share styles

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -16,3 +16,4 @@ $background-header: #ffffff;
 $input-border: #a2deaf;
 $placeholder-color: #c5c5c5;
 $disabled-button: #d5d5d5;
+$twitter-button: #00a0f5;
