--- a/src/html/partials/partials__cards/form__share.html
+++ b/src/html/partials/partials__cards/form__share.html
@@ -8,7 +8,7 @@
     <button class="form__submit js-submit" type="submit" disabled>
       <i class="form__submit--icon far fa-address-card"></i>crear tarjeta
     </button>
-    <a class="js-link-card" target="_blank" title="URL card"></a>
-    <div class="js-twitter"></div>
+    <div class="js-link-card form__card"></div>
+    <div class="js-twitter form__twitter"></div>
   </div>
 </fieldset>
