fix index footer tablet+desktop

--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -4,6 +4,9 @@
     height: 100vh;
     display: grid;
     grid-template-rows: 1fr 110px;
+    @include tablet {
+      grid-template-rows: 1fr 60px;
+    }
   }
 }
 
