--- a/src/html/partials/head.html
+++ b/src/html/partials/head.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600&family=Montserrat:wght@400;700&family=Open+Sans:wght@300&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600;900&family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400;600;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
