--- a/src/scss/layout/_mainpage.scss
+++ b/src/scss/layout/_mainpage.scss
@@ -30,6 +30,7 @@
       font-size: 12px;
     }
     &--text {
+      font-family: $font-index-subtitle;
       font-size: 12px;
       color: $text-icon;
       text-transform: uppercase;
