add changes: cursor pointer / link footer Adalab and links checked (Linkedin and Git)

--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -1,7 +1,7 @@
 <section class="card__wrapper">
   <section class="section__cards ">
     <div class="card__preview">
-      <button class="preview__reset js-reset" type="reset">
+      <button style="cursor:pointer" class="preview__reset js-reset" type="reset">
         <p class="preview__reset--text">Reset</p>
         <i class="far fa-trash-alt preview__reset--icon"></i>
       </button>
