--- a/src/html/partials/partials__cards/design/palette.html
+++ b/src/html/partials/partials__cards/design/palette.html
@@ -5,8 +5,8 @@
     name="chooseColor"
     id="chooseColor"
     value="@@num"
-    @@checked
-  />
+    @@checked 
+    style="cursor:pointer"/>
   <div class="form__radio--color--palette">
     <div class="form__radio--color colorA@@num"></div>
     <div class="form__radio--color colorB@@num"></div>
