--- a/src/html/partials/partials__cards/form__fill.html
+++ b/src/html/partials/partials__cards/form__fill.html
@@ -2,7 +2,7 @@
   <legend class="form__title js-fill__title">
     <i class="form__title--icon far fa-keyboard"></i>
     <h2 class="form__title--text">Rellena</h2>
-    <i class="form__title--chevron icon-medium far fa-chevron-down"></i>
+    <i style="cursor:pointer;" class="form__title--chevron icon-medium far fa-chevron-down"></i>
   </legend>
   <div class="form__fill--wrapper">
     <label for="fullname" class="form__label">Nombre Completo</label>
