add * in required fields

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -6,6 +6,6 @@
         </section>
     </div>
     <section class="footer__logo">
-        <a href="https://adalab.es/" target="blank"><img class="img" src="./assets/images/logo-adalab.png" alt="Logo Adalab"/></a>
+        <a href="https://adalab.es/" target="_blank"><img class="img" src="./assets/images/logo-adalab.png" alt="Logo Adalab"/></a>
     </section>
 </footer>
