--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -173,6 +173,7 @@
   width: 160px;
   height: 42px;
   border-radius: 21px;
+  padding: 23px;
   background-color: $background-button;
   display: flex;
   align-items: center;
