add create card button disabled after creating a card

--- a/src/html/partials/partials__cards/design/palette.html
+++ b/src/html/partials/partials__cards/design/palette.html
@@ -1,12 +1,13 @@
 <div class="form__radio--color--wrapper js-palette">
   <input
-    class="form__radio js-radio"
+    class="form__radio js-radio js-input"
     type="radio"
-    name="chooseColor" 
+    name="chooseColor"
     id="chooseColor"
     value="@@num"
-    @@checked 
-    style="cursor:pointer" />
+    @@checked
+    style="cursor: pointer"
+  />
   <div class="form__radio--color--palette">
     <div class="form__radio--color colorA@@num"></div>
     <div class="form__radio--color colorB@@num"></div>
