add showError Message

--- a/src/html/partials/partials__cards/form__share.html
+++ b/src/html/partials/partials__cards/form__share.html
@@ -8,7 +8,7 @@
     <button style="cursor:pointer"class="form__submit js-submit" type="submit" disabled>
       <i class="form__submit--icon far fa-address-card"></i>crear tarjeta
     </button>
-    
+    <p class="js-text-error text__error"></p>
     <div class="js-link-card form__card"></div>
     <div class="js-twitter form__twitter"></div>
   </div>
