--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -195,6 +195,11 @@
   color: #114e4e;
   line-height: 20px;
 }
+.text__error{
+  font-family: $font-index-subtitle;
+  font-size: 15px;
+  color: $text-icon;
+}
 
 // JAVASCRIPT
 
