refactor: render function

--- a/src/html/partials/partials__cards/mainpage.html
+++ b/src/html/partials/partials__cards/mainpage.html
@@ -22,26 +22,28 @@
             href="#"
             class="preview__links--social js-preview-phone js-border"
             title="Phone"
+            target="_self"
             ><i class="fas fa-mobile-alt preview__links--icon js-icons"></i>
           </a>
           <a
             href="#"
             class="preview__links--social js-preview-email js-border"
             title="Email"
+            target="_self"
             ><i class="far fa-envelope preview__links--icon js-icons"></i>
           </a>
           <a
             href="#"
             class="preview__links--social js-preview-linkedin js-border"
             title="Linkedin"
-            target="_blank"
+            target="_self"
             ><i class="fab fa-linkedin-in preview__links--icon js-icons"></i>
           </a>
           <a
             href="#"
             class="preview__links--social js-preview-github js-border"
             title="GitHub"
-            target="_blank"
+            target="_self"
             ><i class="fab fa-github-alt preview__links--icon js-icons"></i>
           </a>
         </div>
