--- a/src/scss/components/_palette.scss
+++ b/src/scss/components/_palette.scss
@@ -15,94 +15,49 @@ $colorC3: #a0c0cf;
 
 .color {
   &A {
-    &1 {
-      background-color: $colorA1;
-    }
-    &2 {
-      background-color: $colorA2;
-    }
-    &3 {
-      background-color: $colorA3;
-    }
+    &1 {background-color: $colorA1;}
+    &2 {background-color: $colorA2;}
+    &3 {background-color: $colorA3;}
   }
   &B {
-    &1 {
-      background-color: $colorB1;
-    }
-    &2 {
-      background-color: $colorB2;
-    }
-    &3 {
-      background-color: $colorB3;
-    }
+    &1 {background-color: $colorB1;}
+    &2 {background-color: $colorB2;}
+    &3 {background-color: $colorB3;}
   }
   &C {
-    &1 {
-      background-color: $colorC1;
-    }
-    &2 {
-      background-color: $colorC2;
-    }
-    &3 {
-      background-color: $colorC3;
-    }
+    &1 {background-color: $colorC1;}
+    &2 {background-color: $colorC2;}
+    &3 {background-color: $colorC3;}
   }
 }
 
 .icon {
-  &-light {
-    color: $text-index-title;
-  }
-  &-dark {
-    color: $text-index-subtitle;
-  }
-  &-medium {
-    color: $text-icon;
-  }
+  &-light {color: $text-index-title;}
+  &-dark {color: $text-index-subtitle;}
+  &-medium {color: $text-icon;}
 }
 
-.preview__text .colorgreen {
-  color: $colorA1;
-  
+.preview__text .text {
+  &1 {color: $colorA1;}
+  &2 {color: $colorA2;}
+  &3 {color: $colorA3;}
 }
 
-.preview__text .colorred {
-  color: $colorA2;
-  
+.preview__links--icon.js-icons.icon {
+  &1 {color: $colorA1;}
+  &2 {color: $colorA2;}
+  &3 {color: $colorA3;}
 }
 
-.preview__text .coloryellow {
-  color: $colorA3;
-  
-}
-.preview__links--icon.js-icons.colourgreen {
-  color: $colorA1;
-}
-.preview__links--icon.js-icons.colourred {
-  color: $colorA2;
-}
-.preview__links--icon.js-icons.colouryellow {
-  color: $colorA3;
+.preview__links--social.js-border.border-icon {
+  &1 {border: solid 2px $colorC1;}
+  &2 {border: solid 2px $colorC2;}
+  &3 {border: solid 2px $colorC3;}
 }
 
-.preview__links--social.js-border.bordergreen{
-  border: solid 2px $colorC1;
+.preview__text.js-borderleft.border-text {
+  &1 {border-left: solid 5px $colorB1;}
+  &2 {border-left: solid 5px $colorB2;}
+  &3 {border-left: solid 5px $colorB3;}
+}
 
-}
-.preview__links--social.js-border.borderred{
-  border: solid 2px $colorC2;
-  
-}
-.preview__links--social.js-border.borderyellow{
-  border: solid 2px $colorC3;
-  
-}
-.preview__text.js-borderleft.leftgreen{
-  border-left: solid 5px $colorB1;
-}
-.preview__text.js-borderleft.leftred{
-  border-left: solid 5px $colorB2;
-}
-.preview__text.js-borderleft.leftyellow{
-  border-left: solid 5px $colorB3;
-}
