feature: change colors of radio buttons

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,7 +11,7 @@
 
 //Layout
 @import "layout/header";
-@import "layout/mainpage";
+@import "layout/preview";
 @import "layout/form";
 @import "layout/footer";
 
