--- a/src/html/partials/partials__cards/form/form__fill.html
+++ b/src/html/partials/partials__cards/form/form__fill.html
@@ -2,10 +2,15 @@
   <legend class="form__title js-fill__title">
     <i class="form__title--icon far fa-keyboard"></i>
     <h2 class="form__title--text">Rellena</h2>
-    <i style="cursor:pointer;" class="form__title--chevron icon-medium far fa-chevron-down"></i>
+    <i
+      style="cursor: pointer"
+      class="form__title--chevron icon-medium far fa-chevron-down"
+    ></i>
   </legend>
   <div class="form__fill--wrapper">
-    <label for="fullname" class="form__label">Nombre Completo<span class="required">*</span></label>
+    <label for="fullname" class="form__label"
+      >Nombre Completo<span class="required">*</span></label
+    >
     <input
       type="text"
       id="name"
@@ -15,7 +20,9 @@
       class="form__input js-name js-input"
       required
     />
-    <label for="job" class="form__label">Puesto<span class="required">*</span></label>
+    <label for="job" class="form__label"
+      >Puesto<span class="required">*</span></label
+    >
     <input
       type="text"
       id="job"
@@ -25,14 +32,16 @@
       class="form__input js-job js-input"
       required
     />
-    <label for="profilepicture" class="form__label">Imagen de perfil<span class="required">*</span></label>
+    <label for="profilepicture" class="form__label"
+      >Imagen de perfil<span class="required">*</span></label
+    >
 
     <div class="form__photosection">
       <label for="photo" class="form__photobutton js__profile-trigger"
         >Añadir imagen</label
       >
       <input
-        class="form__photoinput js__profile-upload-btn js-photo js-input hidden"
+        class="form__photoinput js__profile-upload-btn js-photo hidden"
         type="file"
         name="photo"
         id="photo"
@@ -40,7 +49,9 @@
       />
       <span class="form__photothumb js__profile-preview"></span>
     </div>
-    <label for="email" class="form__label">Email<span class="required">*</span></label>
+    <label for="email" class="form__label"
+      >Email<span class="required">*</span></label
+    >
     <input
       type="email"
       id="email"
@@ -57,7 +68,9 @@
       placeholder="Ej: 555-55-55-55"
       class="form__input js-phone js-input"
     />
-    <label for="linkedin" class="form__label">Linkedin<span class="required">*</span></label>
+    <label for="linkedin" class="form__label"
+      >Linkedin<span class="required">*</span></label
+    >
     <input
       type="text"
       id="linkedin"
@@ -66,7 +79,9 @@
       class="form__input js-linkedin js-input"
       required
     />
-    <label for="github" class="form__label">Github<span class="required">*</span></label>
+    <label for="github" class="form__label"
+      >Github<span class="required">*</span></label
+    >
     <input
       type="text"
       id="github"
@@ -75,6 +90,9 @@
       class="form__input js-github js-input"
       required
     />
-    <span class="warning">¡Hola! Los campos con <span class="required">* </span>son obligatórios.</span>
+    <span class="warning"
+      >¡Hola! Los campos con <span class="required">* </span>son
+      obligatórios.</span
+    >
   </div>
 </fieldset>
