fix: photo required & disable spellcheck

--- a/src/html/partials/partials__cards/form/form__fill.html
+++ b/src/html/partials/partials__cards/form/form__fill.html
@@ -15,9 +15,10 @@
       type="text"
       id="name"
       name="name"
-      placeholder="Ej:Sally Jill"
+      placeholder="Ej: Mrs. Chanandler Bong"
       pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"
       class="form__input js-name js-input"
+      spellcheck="false"
       required
     />
     <label for="job" class="form__label"
@@ -27,9 +28,10 @@
       type="text"
       id="job"
       name="job"
-      placeholder="Ej: Front-end unicorn"
+      placeholder="Ej: Front-end turkey"
       pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"
       class="form__input js-job js-input"
+      spellcheck="false"
       required
     />
     <label for="profilepicture" class="form__label"
@@ -41,7 +43,7 @@
         >Añadir imagen</label
       >
       <input
-        class="form__photoinput js__profile-upload-btn js-photo hidden"
+        class="form__photoinput js__profile-upload-btn js-input js-photo hidden"
         type="file"
         name="photo"
         id="photo"
@@ -58,6 +60,7 @@
       name="email"
       placeholder="Ej: sally-hill@gmail.com"
       class="form__input js-email js-input"
+      spellcheck="false"
       required
     />
     <label for="phone" class="form__label">Teléfono</label>
@@ -67,6 +70,7 @@
       name="phone"
       placeholder="Ej: 555-55-55-55"
       class="form__input js-phone js-input"
+      spellcheck="false"
     />
     <label for="linkedin" class="form__label"
       >Linkedin<span class="required">*</span></label
@@ -77,6 +81,7 @@
       name="linkedin"
       placeholder="Ej: linkedin.com/in/sally.hill"
       class="form__input js-linkedin js-input"
+      spellcheck="false"
       required
     />
     <label for="github" class="form__label"
@@ -88,6 +93,7 @@
       name="github"
       placeholder="Ej: @sally-hill"
       class="form__input js-github js-input"
+      spellcheck="false"
       required
     />
     
