fix: console error photo required

--- a/src/html/partials/partials__cards/form/form__fill.html
+++ b/src/html/partials/partials__cards/form/form__fill.html
@@ -43,7 +43,7 @@
         >Añadir imagen</label
       >
       <input
-        class="form__photoinput js__profile-upload-btn js-input js-photo hidden"
+        class="form__photoinput js__profile-upload-btn js-photo hidden"
         type="file"
         name="photo"
         id="photo"
